Fixes for grid, canvas and textblock controls (#232)
* Changed the default size when the canvas items have `width = height = 0`

Due to the `gx-canvas` streches to the maximum `width` and `height` of the items to implement `auto-grow = True`, we decided to keep the original `width` and `height` of the `gx-canvas` when the items have `width = height = 0`.

issue: 92178

* The horizontal scroll bar will no longer be visible when the content overflows

issue: 92176

* The `gx-textblock` control now uses the alignment of the direct parent control

issue: 92179

* Readme update

--- a/src/components/textblock/textblock.scss
+++ b/src/components/textblock/textblock.scss
@@ -3,27 +3,22 @@
 
 // Used to horizontally and vertically align the text
 @mixin alignment($text-align: null, $align-items: null) {
-  gx-textblock {
-    & > .content.text-content {
-      @if ($text-align != null) {
-        text-align: $text-align;
-      }
+  .content.text-content {
+    @if ($text-align != null) {
+      text-align: $text-align;
+    }
 
-      & > .readonly-content-container {
-        @if ($align-items != null) {
-          align-items: $align-items;
-        }
+    .readonly-content-container {
+      @if ($align-items != null) {
+        align-items: $align-items;
       }
     }
   }
 }
 
-// Default alignment which supports RTL
-@include alignment(start, flex-start);
-
 // Used when autoGrow = false and format = HTML
 gx-table-cell[min-height][max-height] {
-  gx-textblock {
+  & > gx-textblock {
     & > .content.html-content {
       .html-container {
         .inner-content {
@@ -35,6 +30,9 @@ gx-table-cell[min-height][max-height] {
 }
 
 gx-textblock {
+  // Default alignment which supports RTL
+  @include alignment(start, flex-start);
+
   @include container-margins();
   @include visibility(inline-flex);
   flex: 1;
@@ -89,19 +87,27 @@ gx-textblock {
   }
 }
 
-// Alignments based on parent control alignment
+// Alignments based on the direct parent control alignment
 [align="center"] {
-  @include alignment(center);
+  & > gx-textblock {
+    @include alignment(center);
+  }
 }
 
 [align="right"] {
-  @include alignment(end);
+  & > gx-textblock {
+    @include alignment(end);
+  }
 }
 
 [valign="middle"] {
-  @include alignment($align-items: center);
+  & > gx-textblock {
+    @include alignment($align-items: center);
+  }
 }
 
 [valign="bottom"] {
-  @include alignment($align-items: flex-end);
+  & > gx-textblock {
+    @include alignment($align-items: flex-end);
+  }
 }
